# flouns

./: Dockerfile  README.md  calls.html  docker-compose.yml  graph.html  index.html  pyproject.toml  reports.html  requirements.txt  shared.js  speakers.html  styles.css  uploads.html
configs/: config.yaml
data/: Datasheet.md  watchlist.json
scripts/: build_kg.py  diarize.py  download_common_voice.py  extract_entities.py  generate_audio_test_samples.py  generate_synthetic_transcripts.py  prepare_dataset.py  process_audio.py  run_api.py  transcribe.py  validate_dataset.py
src/: __init__.py
src/api/: __init__.py  main.py  models.py  orchestrator.py  routes.py  store.py
src/asr/: __init__.py  alignment.py  backends.py  export.py  metrics.py  pipeline.py
src/audio/: __init__.py  io.py  pipeline.py  quality.py  vad.py
src/diarization/: __init__.py  clustering.py  embeddings.py  metrics.py  pipeline.py  registry.py
src/ingestion/: __init__.py  manifest.py
tests/: test_api_models.py  test_api_routes.py  test_api_store.py  test_arabic_text.py  test_asr_alignment.py  test_asr_backends.py  test_asr_export_pipeline.py  test_asr_metrics.py  test_audio_io.py  test_audio_pipeline.py  test_audio_quality.py  test_audio_vad.py  test_diarization_clustering.py  test_diarization_embeddings.py  test_diarization_metrics.py  test_diarization_pipeline.py  test_diarization_registry.py  test_kg_backends.py  test_kg_builder.py  test_kg_queries_export.py  test_manifest.py  test_nlp_coreference.py  test_nlp_events.py  test_nlp_keywords.py  test_nlp_ner.py  test_nlp_pipeline.py
(+16 files in other folders)
